Revision 4.2.2
--------------

- Oneliner CommunityData configuration object can now be initialized
  with community name only, security name will be chosen automatically.
- Oneliner LCD configuration routines reworked towards clarity. The
  side-effect of this change is that repetitive oneliner call with the same
  securityName and different configuration options will only honor
  the first settings. Previous implementation would override older settings.
- Transport dispatcher now provides its own time expressed in 
  fractions of second. SNMP engine uses this notion of time for
  handling requests timeout to make packet flow time bound
  to async I/O core operations rather than to real time.
- The libsmi2pysnmp tool improved to handle incomplete SMI v1->v2
  conversion performed by smidump. The remaining core SMIv1 modules
  excluded from the core MIB set.
- The pyasn1 constraint and enumeration objects put into ASN1-*
  MIB modules what appears to be more in-line with SMI. Existing
  MIB modules as well as libsmi2pysnmp tool corrected accordingly.
- The MibBuilder.importSymbols() now takes optional kwargs and
  push them into MIB modules globals(). This is to facilitate
  passing user infomation, such as DB connection handler, to MIB
  module namespace so it could be used by ManagedObjects implementations.
- When running on Python3, SMI will re-raise exceptions with the original
  traceback for easier diagnostics.
- Fix to oneliner configuration routine that used to implicitly
  tag SNMPv1/v2c auth and transport LCD rows what resulted in
  huge delays when processing incoming messages wish large number
  of peers configured.
- Fix to SnmpEngineID value autogeneration (used to fail on Mac).
- SNMPv2-SMI.ObjectType.__repr__() fixed to do a repr() on its components.
- All SNMPv2-SMI.MibNode-based objects, once exported to a mibBuilder, will
  carry an embedded label symbol.
- Exlicit repr() calls replaced with '%r'